--- a/assets/css/themes/mainwp-wpadmin-theme.css
+++ b/assets/css/themes/mainwp-wpadmin-theme.css
@@ -26,6 +26,8 @@
   /* Sets color for yellow elements. */
   --yellow-color: #dba617;
 
+  --orange-color: #c47335;
+
   /* Sets color for red elements. */
   --red-color: #d63638;
 
@@ -558,6 +560,14 @@ body.mainwp-ui.mainwp-custom-theme,
 
 .mainwp-ui.mainwp-custom-theme .ui.button.red {
   background-color: var(--red-color);
+}
+
+.mainwp-ui.mainwp-custom-theme .ui.button.yellow {
+  background-color: var(--yellow-color);
+}
+
+.mainwp-ui.mainwp-custom-theme .ui.button.orange {
+  background-color: var(--orange-color);
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.mini.compact.button {
