--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -1126,6 +1126,14 @@
   border-radius: 0px !important;
 }
 
+.mainwp-ui.mainwp-custom-theme  .ui.secondary.pointing.menu:not(.inverted) {
+  border-color: var(--mainwp-border) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme  .ui.secondary.pointing.menu:not(.inverted) .right.menu .item {
+  border-color: rgba(0,0,0,0) !important;
+}
+
 .mainwp-ui.mainwp-custom-theme .ui.inverted.pointing.menu .item {
   color: var(--mainwp-text) !important;
   background-color: var(--mainwp-element-background);
@@ -1166,6 +1174,29 @@
 .mainwp-ui.mainwp-custom-theme .ui.pointing.vertical.menu .item:after {
   display: none !important;
 }
+
+/* UI Menus and Tabs
+  ========================================================================== */
+
+  .mainwp-ui.mainwp-custom-theme .ui.tabular.menu {
+    border-color: var(--mainwp-border) !important;
+  }
+
+  .mainwp-ui.mainwp-custom-theme .ui.tabular.menu .item {
+    background-color: var(--mainwp-element-background) !important;
+    color: var(--mainwp-text) !important;
+  }
+
+  .mainwp-ui.mainwp-custom-theme .ui.tabular.menu .active.item {
+    background-color: var(--mainwp-element-background) !important;
+    color: var(--mainwp-text) !important;
+    border-color: var(--mainwp-border) !important;
+  }
+
+  .mainwp-ui.mainwp-custom-theme .ui.attached.tab.segment {
+    background-color: var(--mainwp-element-background) !important;
+    border-color: var(--mainwp-border) !important;
+  }
 
 /* Main Content Area
   ========================================================================== */
@@ -1257,12 +1288,15 @@ body.mainwp-ui.mainwp-custom-theme,
 
 .mainwp-ui.mainwp-custom-theme .mainwp-sub-submenu ~ .mainwp-sub-header,
 .mainwp-ui.mainwp-custom-theme .mainwp-sub-submenu ~ .mainwp-actions-bar,
+.mainwp-ui.mainwp-custom-theme .mainwp-sub-submenu ~ .ui.tab .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme #mainwp-updraftplus-extension .mainwp-actions-bar,
+.mainwp-ui.mainwp-custom-theme .mainwp_page_Extensions-Mainwp-Backwpup-Extension .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme .mainwp-main-content .mainwp-sub-header,
 .mainwp-ui.mainwp-custom-theme .mainwp-main-content .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme #mainwp-site-mode-wrap .mainwp-sub-header,
 .mainwp-ui.mainwp-custom-theme #mainwp-site-mode-wrap .mainwp-actions-bar,
-.mainwp-ui.mainwp-custom-theme #mainwp-article-uploader-import .mainwp-actions-bar {
+.mainwp-ui.mainwp-custom-theme #mainwp-article-uploader-import .mainwp-actions-bar,
+.mainwp-ui.mainwp-custom-theme .mainwp_wfc_tabs_content .mainwp-actions-bar {
   margin-top: 1em !important;
 }
 
@@ -1396,6 +1430,22 @@ body.mainwp-ui.mainwp-custom-theme,
   display: none !important;
 }
 
+/* Grids
+  ========================================================================== */
+
+  .mainwp-ui.mainwp-custom-theme .ui.celled.grid {
+    box-shadow: 0 0 0 1px var(--mainwp-border) !important;
+  }
+
+  .mainwp-ui.mainwp-custom-theme .ui.celled.grid > .row {
+    box-shadow: 0 -1px 0 0 var(--mainwp-border) !important;
+  }
+
+  .mainwp-ui.mainwp-custom-theme .ui.celled.grid > .column:not(.row), 
+  .mainwp-ui.mainwp-custom-theme .ui.celled.grid > .row > .column {
+      box-shadow: -1px 0 0 0 var(--mainwp-border) !important;
+  }
+
 /* Gridster Fixes
   ========================================================================== */
 
@@ -1415,6 +1465,29 @@ body.mainwp-ui.mainwp-custom-theme,
 
 .mainwp-ui.mainwp-custom-theme #mainwp-test-connection-result {
   background-color: var(--mainwp-base-background) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme .itsec-notification-center-notification-settings {
+  border-color: var(--mainwp-border) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #mainwp-jetpack-scan-threats-table .ui.white.segment,
+.mainwp-ui.mainwp-custom-theme #mainwp-jetpack-protect-vulnerabilities-table .ui.white.segment {
+  background-color: var(--mainwp-element-background) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #mainwp-sucuri-scan-modal .ui.segment,
+.mainwp-ui.mainwp-custom-theme #mainwp-sucuri-scan-modal .ui.secondary.segment,
+.mainwp-ui.mainwp-custom-theme #mainwp-time-tracker-view-task-modal .ui.segment,
+.mainwp-ui.mainwp-custom-theme #mainwp-time-tracker-view-edit-task-modal .ui.segment {
+  background-color: var(--mainwp-element-background-secondary) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #remote-storage-container input.labelauty + label {
+  background-color: var(--mainwp-element-background) !important;
+  border: 1px solid var(--mainwp-border) !important;
+  border-radius: var(--input-radius) !important;
+  color: var(--mainwp-text) !important;
 }
 
 /*******************************
@@ -1509,6 +1582,14 @@ body.mainwp-ui.mainwp-custom-theme,
 .mainwp-ui.mainwp-custom-theme .widget-top {
   background: var(--mainwp-element-background);
   border: 1px solid var(--mainwp-border);
+  color: var(--mainwp-text) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme .widget-inside select,
+.mainwp-ui.mainwp-custom-theme .widget-top select {
+  background: var(--mainwp-element-background);
+  border: 1px solid var(--mainwp-border);
+  color: var(--mainwp-text) !important;
 }
 
 
@@ -1628,6 +1709,30 @@ body.mainwp-ui.mainwp-custom-theme,
 .mainwp-ui.mainwp-custom-theme #wf-scan-activity-log {
   background-color: var(--mainwp-element-background) !important;
 }
+
+.mainwp-ui.mainwp-custom-theme #wf-live-traffic-legend {
+  background-color: var(--mainwp-element-background) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #wf-live-traffic select,
+.mainwp-ui.mainwp-custom-theme .select2-container--default .select2-selection--single {
+  background-color: var(--mainwp-element-background) !important;
+  border: 1px solid var(--mainwp-border) !important;
+  color: var(--mainwp-text) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #wf-live-traffic table tbody tr td {
+  border-color: var(--mainwp-border) !important;
+  background-color: var(--mainwp-element-background) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #wf-live-traffic .wf-btn.wf-btn-default {
+  background-color: var(--mainwp-element-background) !important;
+  border: 1px solid var(--mainwp-border) !important;
+  border-radius: var(--button-radius) !important;
+  color: var(--mainwp-text) !important;
+}
+
 
 /* dark theme */
 .mainwp-ui.mainwp-custom-theme .dt-scroll-body tbody tr.selected .ui.red.button,
