--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -1455,6 +1455,7 @@ body.mainwp-ui.mainwp-custom-theme,
 .mainwp-ui.mainwp-custom-theme .mainwp-sub-submenu ~ .ui.tab .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme #mainwp-updraftplus-extension .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme .mainwp_page_Extensions-Mainwp-Backwpup-Extension .mainwp-actions-bar,
+.mainwp-ui.mainwp-custom-theme #mainwp-module-log-overview-sub-header.mainwp-sub-header,
 .mainwp-ui.mainwp-custom-theme .mainwp-main-content .mainwp-sub-header,
 .mainwp-ui.mainwp-custom-theme .mainwp-main-content .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme #mainwp-site-mode-wrap .mainwp-sub-header,
