--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -28,6 +28,25 @@
  --area-radius: 1rem;
  --mainwp-area-padding: 1.25rem;
 }
+.mainwp-ui.mainwp-custom-theme .ui.double.loader::after {
+  display: none !important;
+}
+.mainwp-ui.mainwp-custom-theme .ui.double.loader::before {
+    content: '';
+    display: inline-block;
+    width: 2.28571429;
+    height: 2.28571429;
+    border: none !important;
+    background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 170 170" xmlns="http://www.w3.org/2000/svg"><circle fill="%237FB100" cx="85" cy="85" r="78.67"/><circle fill="%23FFFFFF" cx="85" cy="37.8" r="15.73"/><polygon fill="%23FFFFFF" points="111.75,132.2 85,147.94 58.25,132.2 85,22.06"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: pulse 1.25s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0%, 100% { transform: scale(1); opacity: 1; }
+    50% { transform: scale(1.3); opacity: 0.99; }
+}
 
 
 .mainwp-ui.mainwp-custom-theme #mainwp-all-active-plugins-table i.circular.icon.cached-icon-customable,
@@ -1475,7 +1494,7 @@ body.mainwp-ui.mainwp-custom-theme,
 
 .mainwp-ui.mainwp-custom-theme .ui.dimmer,
 .mainwp-ui.mainwp-custom-theme .ui.inverted.dimmer {
-  background-color: rgba(28, 29, 27, 0.6) !important;
+  background-color: var(--mainwp-base-background-secondary) !important;
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.dimmer .text,
