Add help popup and update UI terminology
Introduces a help popup for the support menu item with custom styling and dismiss functionality. Updates UI text to use 'Add-ons' instead of 'Extensions' for consistency. Refactors settings page slider initialization scripts to run inside a document ready handler for improved reliability.

--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -1024,12 +1024,21 @@
 .mainwp-ui.mainwp-custom-theme [data-tooltip]::before,
 .mainwp-ui.mainwp-custom-theme [data-tooltip]::after,
 .mainwp-ui.mainwp-custom-theme .ui.slider [data-tooltip][data-variation="black"]::after,
-.mainwp-ui.mainwp-custom-theme .ui.popup:not(.calendar, .menu, .mainwp-popup-tooltip):before,
-.mainwp-ui.mainwp-custom-theme .ui.popup:not(.calendar, .menu, .mainwp-popup-tooltip):after {
+.mainwp-ui.mainwp-custom-theme .ui.popup:not(.calendar, .menu, .mainwp-popup-tooltip, .mainwp-help-popup):before,
+.mainwp-ui.mainwp-custom-theme .ui.popup:not(.calendar, .menu, .mainwp-popup-tooltip, .mainwp-help-popup):after {
   background: var(--mainwp-element-background-secondary) !important;
   border: 1px solid var(--mainwp-element-background-secondary) !important;
   color: var(--mainwp-text) !important;
   box-shadow: none !important;
+}
+
+.mainwp-ui.mainwp-custom-theme .mainwp-help-popup:before {
+  background: #fff !important;
+  border: #fff !important;
+}
+
+.mainwp-ui.mainwp-custom-theme .mainwp-help-popup .ui.header {
+  color: #1c1d1b !important;
 }
 
 /* Placeholder */
