--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -1576,3 +1576,12 @@ body.show-upload-theme .mainwp-content-wrap .mainwp-upload-theme {
     bottom: 1.25rem !important;
     left: 1.25rem !important;
 }
+
+#item-his-accord-wrapper .ui.accordion .title {
+  border-bottom: 1px solid #ddd;
+  display: flex;
+}
+.mainwp-ui .ui.accordion .title .title-right{
+    margin-left: auto;
+    display: inline-block;
+}
