Fix: issue get history changes by date issue Add: changes history view by day Add: history changes for plugins/themes in manage plugins/themes and update plugins/themes - global and individual sites

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -1577,7 +1577,7 @@ body.show-upload-theme .mainwp-content-wrap .mainwp-upload-theme {
     left: 1.25rem !important;
 }
 
-#item-his-accord-wrapper .ui.accordion .title {
+#change-history-according-wrapper .ui.accordion .title {
   border-bottom: 1px solid #ddd;
   display: flex;
 }
