Enhance tag management UI and UX in Manage Groups
Improves the Manage Groups page by refining the UI layout, adding tag search/filter functionality, and updating modals for tag creation and editing. JavaScript enhancements include auto-selecting newly created tags, improved feedback messages, and visual tag highlighting in the sites table. Backend changes ensure correct tag ID handling and return values, and the CSS is updated for better tag filter styling. These changes collectively streamline tag management and improve user experience.

--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -544,6 +544,7 @@
 .mainwp-ui.mainwp-custom-theme .ui.input input[type="color"],
 .mainwp-ui.mainwp-custom-theme input[type="color"],
 .mainwp-ui.mainwp-custom-theme input#mainwp-select-sites-filter,
+.mainwp-ui.mainwp-custom-theme input#mainwp-select-tags-filter,
 .mainwp-ui.mainwp-custom-theme .ui.calendar input,
 .mainwp-ui.mainwp-custom-theme .ui.form textarea,
 .mainwp-ui.mainwp-custom-theme .ui.input > input {
@@ -693,6 +694,7 @@
   color: var(--mainwp-text);
 }
 
+.mainwp-ui.mainwp-custom-theme #mainwp-select-tags-filter,
 .mainwp-ui.mainwp-custom-theme #mainwp-select-sites-filter {
   border-radius: 16px !important;
   -webkit-border-radius: 16px !important;
